Fix UI bug: Editor and Calendar overlapping

--- a/style.css
+++ b/style.css
@@ -832,7 +832,7 @@ body {
   margin: 4px 0;
 }
 
-#editorView {
+#editorView.active {
   display: flex;
   flex-direction: row;
   height: 100%;
